--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
             <!-- Recommend -->
             <h1 class="fw-bold mt-5" style="text-align: center; font-size: 50px;">Recommend</h1>
             <hr class="mx-auto">
-            <div class="w-75 mt-5 mx-auto row">
-                <div class="row Recommend1 mb-5 ">
+            <div class="w-75 mt-5 mx-auto">
+                <div class="row Recommend1 mb-5 text-center">
                     <div class="col-lg-6 col-sm-12 music">
                         <img src="https://cdn.discordapp.com/attachments/882306005772427284/1035192566485876786/easily.jpg"
                             class="img-fluid" alt="Easily">
@@ -255,7 +255,7 @@
                             won’t come easily Doesn’t mean we shouldn’t try"</p>
                     </div>
                 </div>
-                <div class="row Recommend2 mb-5 ">
+                <div class="row Recommend2 mb-5 text-center">
                     <div class="col-lg-6 col-sm-12 music">
                         <img src="https://cdn.discordapp.com/attachments/882306005772427284/1035192567186329740/beatiful.jpg"
                             class="img-fluid" alt="Beautiful">
@@ -268,7 +268,7 @@
                             Beautiful my love Beautiful your heart It's a beautiful life"</p>
                     </div>
                 </div>
-                <div class="row Recommend3 mb-5 ">
+                <div class="row Recommend3 mb-5 text-center">
                     <div class="col-lg-6 col-sm-12 music">
                         <img src="https://cdn.discordapp.com/attachments/882306005772427284/1035192586840834140/Eternal_Frame.jpg"
                             class="img-fluid" alt="Ethernal Frame">
@@ -281,7 +281,7 @@
                             you feel the same? Am I only dreaming? Is this burning an eternal flame?"</p>
                     </div>
                 </div>
-                <div class="row Recommend4 mb-5 ">
+                <div class="row Recommend4 mb-5 text-center">
                     <div class="col-lg-6 col-sm-12 music">
                         <img src="https://cdn.discordapp.com/attachments/882306005772427284/1035192616670732419/419f4591e0ac693d.jpg"
                             class="img-fluid" alt="หลอก">
@@ -293,7 +293,7 @@
                             สุดท้ายแล้วเป็นไง เธอทิ้งตัวฉันไป แต่อันที่จริงฉันไม่รักเธออยู่แล้ว"</p>
                     </div>
                 </div>
-                <div class="row Recommend5 mb-5 ">
+                <div class="row Recommend5 mb-5 text-center">
                     <div class="col-lg-6 col-sm-12 music">
                         <img src="https://cdn.discordapp.com/attachments/882306005772427284/1035192626749648946/3065f3a30de690a0.jpg"
                             class="img-fluid" alt="จี่หอย">
@@ -305,7 +305,7 @@
                             มันเป็นโตมาร กัดกกข้าวในนา มันเป็นโตมาร กัดกกข้าวในนา"</p>
                     </div>
                 </div>
-                <div class="row Recommend6 mb-5 ">
+                <div class="row Recommend6 mb-5 text-center">
                     <div class="col-lg-6 col-sm-12 music">
                         <img src="https://cdn.discordapp.com/attachments/882306005772427284/1035192640767004682/f44b670a6aedd8d9.jpg"
                             class="img-fluid" alt="เกินต้าน">
