--- a/cart.html
+++ b/cart.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thiscordmerch Shop</title>
     <link rel="stylesheet" href="assets/css/NavBar.css">
-    <link rel="stylesheet" href="assets/css/cart.css?v=1">
+    <link rel="stylesheet" href="assets/css/cart.css?v=3">
     <!--Import Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -86,17 +86,7 @@
             <hr class="hr-line2">
             <div class="list-product">
                 <div id="order-product" class="product-container">
-                    <!-- <div class="product">
-                        <img id="p1" src="assets/images/Product/recordTest.png" alt="product">
-                        <h5 class="record-name">Record name</h5>
-                        <div class="product-num">
-                            <span class="btn-minus">-</span>
-                            <input id="num-p" type="text" value="1">
-                            <span class="btn-plus">+</span>
-                        </div><br>
-                        <h5>$10.00</h5>
-                    </div> -->
-
+                    <!-- ForProductFromJS -->
                 </div>
             </div>
             <hr class="hr-line2">
@@ -117,7 +107,7 @@
                         </div>
                         <div class="btnProduct-container">
                             <button onclick="updateCart()" id="btn-UpdateCart">Update Cart</button><br>
-                            <button onclick="buyProduct()" id="btn-BuyProduct">Check Out</button>
+                            <button onclick="buyProduct()" id="btn-BuyProduct">Buy</button>
                         </div>
                     </div>
                 </div>
@@ -157,7 +147,7 @@
         </footer>
 
     </div>
-    <script src="assets/js/cart.js?v=1"></script>
+    <script src="assets/js/cart.js?v=3"></script>
     <script src="assets/js/NavBar.js"></script>
 </body>
 
