--- a/product.html
+++ b/product.html
@@ -96,7 +96,7 @@
                 <p style="padding-top: 1%; margin:0;"><b>Artist:&nbsp;&nbsp;</b><span id="content-artist"></span></p>
                 <p style="padding-top: 1%; margin:0;"><b>Description:&nbsp;&nbsp;</b><span id="content-des"></span></p>
                 <div class="addProduct-container">
-                    <a onclick="addProduct()" href="#" id="btn-addProduct">
+                    <a onclick="addProduct()" href="cart.html" id="btn-addProduct">
                         <center style="margin-top: 13px;">Add to Cart</center>
                     </a>
                 </div>
