--- a/login.html
+++ b/login.html
@@ -84,9 +84,9 @@
             <h1 class="fw-bold">Login</h1>
             <hr class="hrOne mx-auto">
             <form class="form" action="">
-                <input type="text" class="inpEmail rounded-0 mt-4 mb-2 w-25 p-2" name="email" id = "va1" placeholder="Email"><br>
-                <input type="password" class="inpPass rounded-0 mb-2 w-25 p-2" name="password"  id = "va2" placeholder="Password"><br>
-                <button class="but rounded-0 mb-4 w-25 p-2" onclick="check()">Sign In</button>
+                <input type="text" class="inpEmail rounded-0 mt-4 mb-2 w-25 p-2" name="email" id="Email" placeholder="Email"><br>
+                <input type="password" class="inpPass rounded-0 mb-2 w-25 p-2" name="password"  id="Pass" placeholder="Password"><br>
+                <button type="button" class="but rounded-0 mb-4 w-25 p-2" onclick="checkIn()">Sign In</button>
             </form>
             <div class="fw-normal">
                 <a href="createAcc.html" class="create">Create Account</a>
@@ -133,6 +133,6 @@
     </div>
 
     <script src="assets/js/NavBar.js"></script>
-    <script src="assets/js/log.js"></script>
+    <script src="assets/js/login.js"></script>
 </body>
 </html>
