--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                 <div class="col-6 col-sm-6 col-md-3">
                     <div><h5 style="font-size: 15px;"><b>More</b></h5></div>
                     <div><a href="credit.html" style="text-decoration: none; color:#353535; font-size: 15px;">Credit</a></div>
-                    <div><a href="#" style="text-decoration: none; color:#353535; font-size: 15px;">Account</a></div>
+                    <div><a href="login.html" style="text-decoration: none; color:#353535; font-size: 15px;">Account</a></div>
                     <div><a href="cart.html" style="text-decoration: none; color:#353535; font-size: 15px;">Cart</a></div>
                 </div>
             </div>
