--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
                             class="img-fluid" alt="Easily">
                     </div>
                     <div class="col-lg-6 col-sm-12 detail text-start">
-                        <h3>ชื่อเพลง : Easily</h3>
-                        <h3>ศิลปิน : Bruno Major</h3>
+                        <h3>Song : Easily</h3>
+                        <h3>Artist : Bruno Major</h3>
                         <p class="fs-4">"Don’t you tell me that it wasn’t meant to be Call it quits, call it destiny
                             Just because it
                             won’t come easily Doesn’t mean we shouldn’t try"</p>
@@ -261,8 +261,8 @@
                             class="img-fluid" alt="Beautiful">
                     </div>
                     <div class="col-lg-6 col-sm-12 detail text-start">
-                        <h3>ชื่อเพลง : Beautiful</h3>
-                        <h3>ศิลปิน : Crush</h3>
+                        <h3>Song : Beautiful</h3>
+                        <h3>Artist : Crush</h3>
                         <p class="fs-4">"It's a beautiful life, beautiful day 미치도록 널 사랑했었던 날 Beautiful life, beautiful
                             day 너를 잃고 싶지 않아
                             Beautiful my love Beautiful your heart It's a beautiful life"</p>
@@ -274,8 +274,8 @@
                             class="img-fluid" alt="Ethernal Frame">
                     </div>
                     <div class="col-lg-6 col-sm-12 detail text-start">
-                        <h3>ชื่อเพลง : Ethernal Frame</h3>
-                        <h3>ศิลปิน : Atomic Kitten</h3>
+                        <h3>Song : Ethernal Frame</h3>
+                        <h3>Artist : Atomic Kitten</h3>
                         <p class="fs-4">"Close your eyes, give me your hand, darling Do you feel my heart beating? Do
                             you understand? Do
                             you feel the same? Am I only dreaming? Is this burning an eternal flame?"</p>
@@ -287,8 +287,8 @@
                             class="img-fluid" alt="หลอก">
                     </div>
                     <div class="col-lg-6 col-sm-12 detail text-start">
-                        <h3>ชื่อเพลง : หลอก</h3>
-                        <h3>ศิลปิน : NICECNX</h3>
+                        <h3>Song : หลอก</h3>
+                        <h3>Artist : NICECNX</h3>
                         <p class="fs-4">"สุดท้ายแล้วเธอไม่โกหก แต่ลืมบอกกันว่าไม่รัก ฉันโดนหลอก เธอบอกกันเธอใจร้าย
                             สุดท้ายแล้วเป็นไง เธอทิ้งตัวฉันไป แต่อันที่จริงฉันไม่รักเธออยู่แล้ว"</p>
                     </div>
@@ -299,8 +299,8 @@
                             class="img-fluid" alt="จี่หอย">
                     </div>
                     <div class="col-lg-6 col-sm-12 detail text-start">
-                        <h3>ชื่อเพลง : จี่หอย</h3>
-                        <h3>ศิลปิน : พี สะเดิด</h3>
+                        <h3>Song : จี่หอย</h3>
+                        <h3>Artist : พี สะเดิด</h3>
                         <p class="fs-4">"เลาะเลียบตามแคบน้ำ แคมหนอง ก็มีของกินเป็นอาหาร หอยปากกว้าง นั่นหล่ะโตการ
                             มันเป็นโตมาร กัดกกข้าวในนา มันเป็นโตมาร กัดกกข้าวในนา"</p>
                     </div>
@@ -312,8 +312,8 @@
                     </div>
 
                     <div class="col-lg-6 col-sm-12 detail text-start">
-                        <h3>ชื่อเพลง : เกินต้าน</h3>
-                        <h3>ศิลปิน : PIXXIE</h3>
+                        <h3>Song : เกินต้าน</h3>
+                        <h3>Artist : PIXXIE</h3>
                         <p class="fs-4">"ก็เธอน่ารักจนเกินต้านขนาดนี้ จะรักคนคนนี้ เพราะคนอื่น ก็สู้เธอไม่ได้หรอก
                             มองทีไรก็น่ารักและสดใส คงต้านเธอไม่ไหว ฉันคงไปรักคนอื่น ไม่ได้หรอก"</p>
                     </div>
