--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="pic/Artist/bol4.jpg" class="product-thumb" alt="">
+                        <img src="pic/Artist/bol 4.jpg" class="product-thumb" alt="">
                     </div>
                     <div class="product-info">
                         <h2 class="product-brand">bol 4</h2>
@@ -140,7 +140,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="pic/Artist/nice.jpg" class="product-thumb" alt="">
+                        <img src="pic/Artist/nicecnx.jpg" class="product-thumb" alt="">
                     </div>
                     <div class="product-info">
                         <h2 class="product-brand">nicecnx</h2>
